--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>چک پرداخت</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div class="container content">
+      <div class="card">
+        <h5 class="header">
+          چک پرداخت
+        </h5>
+        <div class="body">
+          <p>
+            آدرس url رو توی باکس پایین وارد کنید و دکمه تایید رو بزنید
+          </p>
+          <div class="input_box">
+            <label for="input_url" id="input_label">آدرس url</label>
+            <input type="text" id="input_url" />
+          </div>
+          <input type="button" class="check" value="چک کن" id="check_url">
+        </div>
+      </div>
+    </div>
+
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
