--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
           </p>
           <div class="input_box">
             <label for="input_url" id="input_label">آدرس url</label>
-            <input type="text" id="input_url" />
+            <div class="input-group">
+              <input type="text" id="input_url" />
+              <button id="paste">
+                <img src="./assets/img/paste.svg" alt="paste">
+              </button>
+            </div>
           </div>
           <input type="button" class="check" value="چک کن" id="check_url">
         </div>
