--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
           چک پرداخت
         </h5>
         <div class="body">
+          <div class="message">
+            سایت وارد شده مجاز است
+            <img src="./assets/img/tick.svg" alt="">
+          </div>
           <p>
             آدرس url رو توی باکس پایین وارد کنید و دکمه تایید رو بزنید
+            <br><span>باید اول لینک url شما حاوی https باشه</span>
           </p>
           <div class="input_box">
             <label for="input_url" id="input_label">آدرس url</label>
